<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.fraunhofer.iosb.ilt</groupId>
    <artifactId>SensorThingsProcessor</artifactId>
    <version>0.10-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>SensorThings Processor</name>
    <description>A framework for automatic processors for the OGC SensorThings API.</description>
    <url>https://github.com/hylkevds/SensorThingsProcessor</url>
    <inceptionYear>2017</inceptionYear>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mainClass>de.fraunhofer.iosb.ilt.stp.MainApp</mainClass>
        <docker-image-name>fraunhoferiosb/frost-processor</docker-image-name>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.source>11</maven.compiler.source>

        <commons-io.version>2.6</commons-io.version>
        <commons-lang.version>3.9</commons-lang.version>
        <commons-math.version>3.6.1</commons-math.version>
        <Configurable.version>0.22</Configurable.version>
        <dockerfile-maven-plugin.version>1.4.13</dockerfile-maven-plugin.version>
        <FROST-Client.version>0.26</FROST-Client.version>
        <javax-activation.version>1.1.1</javax-activation.version>
        <openjfx.version>13.0.2</openjfx.version>
    </properties>

    <licenses>
        <license>
            <name>GNU General Public License v3, or (at your option) any later version</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.txt</url>
            <comments>For more information see the LICENSE.txt included with the sources.</comments>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Hylke van der Schaaf</name>
            <email>hylke.vanderschaaf@iosb.fraunhofer.de</email>
            <organization>Fraunhofer IOSB</organization>
            <organizationUrl>https://www.iosb.fraunhofer.de</organizationUrl>
        </developer>
    </developers>

    <organization>
        <name>Fraunhofer IOSB</name>
        <url>http://iosb.fraunhofer.de</url>
    </organization>

    <scm>
        <connection>scm:git:git://github.com/hylkevds/SensorThingsProcessor.git</connection>
        <developerConnection>scm:git:ssh://github.com:hylkevds/SensorThingsProcessor.git</developerConnection>
        <url>https://github.com/hylkevds/SensorThingsProcessor/tree/master</url>
        <tag>HEAD</tag>
    </scm>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/hylkevds/SensorThingsProcessor/issues</url>
    </issueManagement>

    <repositories>
        <repository>
            <id>bintray-fraunhoferiosb-Maven</id>
            <name>bintray</name>
            <url>https://dl.bintray.com/fraunhoferiosb/Maven</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>${mainClass}</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
                        <phase>package</phase> <!-- bind to the packaging phase -->
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.spotify</groupId>
                <artifactId>dockerfile-maven-plugin</artifactId>
                <version>${dockerfile-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>build-and-tag-latest</id>
                        <phase>none</phase>
                        <goals>
                            <goal>build</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>tag-version</id>
                        <phase>none</phase>
                        <goals>
                            <goal>tag</goal>
                        </goals>
                        <configuration>
                            <tag>${project.version}</tag>
                        </configuration>
                    </execution>
                    <execution>
                        <id>push-latest</id>
                        <phase>none</phase>
                        <goals>
                            <goal>push</goal>
                        </goals>
                        <configuration>
                            <tag>latest</tag>
                        </configuration>
                    </execution>
                    <execution>
                        <id>push-version</id>
                        <phase>none</phase>
                        <goals>
                            <goal>push</goal>
                        </goals>
                        <configuration>
                            <tag>${project.version}</tag>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <repository>${docker-image-name}</repository>
                    <buildArgs>
                        <JAR_FILE>${project.build.finalName}-jar-with-dependencies.jar</JAR_FILE>
                    </buildArgs>
                </configuration>
                <dependencies>
                    <!-- Java 9 support -->
                    <dependency>
                        <groupId>javax.activation</groupId>
                        <artifactId>activation</artifactId>
                        <version>${javax-activation.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>FROST-Client</artifactId>
            <version>${FROST-Client.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>Configurable</artifactId>
            <version>${Configurable.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>${commons-math.version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.paho</groupId>
            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
            <version>1.2.2</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jul-to-slf4j</artifactId>
            <version>1.7.30</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.3</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${openjfx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${openjfx.version}</version>
        </dependency>
    </dependencies>
</project>
